nginx-ingress/nginx-ingress-configmap.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-configmap
  namespace: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: e4kube1ingrs01.datalinklabs.local
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-service
          servicePort: 80
